--- a/Hekky/HekkyAssembly.asmdef
+++ b/Hekky/HekkyAssembly.asmdef
@@ -3,7 +3,9 @@
     "references": [
         "GUID:d60799ab2a985554ea1a39cd38695018",
         "GUID:f16c18940d95fd44a911829bf5e37070",
-        "GUID:290dd5870d0ead646bcb6ea5c6a60af5"
+        "GUID:290dd5870d0ead646bcb6ea5c6a60af5",
+        "GUID:3c1bc1267eab5884ebe7f232c09ee0d9",
+        "GUID:09c2257d1db548a45b6e1fecfa871e81"
     ],
     "includePlatforms": [
         "Editor"
